--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
 
     <form id="computationForm">
       <div>
-        <label for="stiffness">Stiffness</label>
-        <input type="number" id="stiffness" step="any" required />
+        <label for="youngsModulus">Young's Modulus [MPa]</label>
+        <input type="number" id="youngsModulus" step="any" required />
       </div>
       <br />
       <div>
-        <label for="displacement">Displacement</label>
-        <input type="number" id="displacement" step="any" required />
+        <label for="strain">Strain</label>
+        <input type="number" id="strain" step="any" required />
       </div>
 
       <button type="submit">Compute</button>
