fix frontend styling and add unit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
       </div>
       <br />
       <div>
-        <label for="strain">Strain</label>
+        <label for="strain">Strain [-]</label>
         <input type="number" id="strain" step="any" required />
       </div>
 
